--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu, macos]
+        poetry-version: [1.1.4]
         python-version: [3.8, 3.9]
     steps:
       - uses: actions/checkout@v2
@@ -28,10 +29,10 @@ jobs:
         shell: bash
         run: echo ::set-output name=version::$(python -c "import sys; print('-'.join(str(v) for v in sys.version_info))")
 
-      - name: Install Poetry
-        run: |
-          python get-poetry.py --preview -y
-          source $HOME/.poetry/env
+      - name: Run Poetry
+        uses: abatilo/actions-poetry@v2.0.0
+        with:
+          poetry-version: ${{ matrix.poetry-version }}
 
       - name: Bootstrap poetry
         shell: bash
