--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -124,15 +124,5 @@ jobs:
         run: poetry run pytest --cov=yarnlog --cov-report=xml
 
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v1
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          file: ./coverage.xml
-          files: ./coverage1.xml,./coverage2.xml
-          directory: ./coverage/reports/
-          flags: unittests
-          env_vars: OS,PYTHON
-          name: yarnlog
-          fail_ci_if_error: true
-          path_to_write_report: ./coverage/codecov_report.gz
-          verbose: true
+        shell: bash
+        run: bash <(curl -s https://codecov.io/bash)
