--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,10 @@ on:
 jobs:
   release:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        poetry-version: [1.1.4]
+        python-version: [3.8]
 
     steps:
       - uses: actions/checkout@v2
