build: do not install dev dependencies when release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,7 +56,7 @@ jobs:
 
       - name: Install dependencies
         shell: bash
-        run: poetry install
+        run: poetry install --no-dev
 
       - name: Build project for distribution
         shell: bash
