--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ mypy = "^0.790"
 pdbpp = "^0.10.2"
 pre-commit = "^2.9.0"
 requests-mock = "^1.8.0"
+freezegun = "^1.0.0"
 
 [tool.poetry.scripts]
 yarnlog = 'yarnlog.main:main'
